# 42_Common_Core_Call_me_maybe

./: Makefile  README.md  pyproject.toml
data/input/: function_calling_tests_extended.json  functions_definition_test.json
src/: __main__.py  decoder.py  llm_wrapper.py  reader.py  schema.py  writer.py
