[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling with constrained decoding"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pydantic>=2.11.9",
    "accelerate>=1.10.1",
    "dspy>=3.0.3",
    "fire>=0.7.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "huggingface-hub>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
